<resources>
    <string name="app_name">NutritionViewer</string>
    <string name="calcium">Calcium</string>
    <string name="vitamin_a">Vitamin A</string>
    <string name="vitamin_c">Vitamin C</string>
    <string name="carbs_total">Carbs Total</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="dietary_fiber">Dietary Fiber</string>
    <string name="fat_monosaturated">Fat Monosaturated</string>
    <string name="fat_polysaturated">Fat Polysaturated</string>
    <string name="fat_saturated">Fat Saturated</string>
    <string name="fat_unsaturated">Fat Unsaturated</string>
    <string name="fat_total">Fat Total</string>
    <string name="fat_trans">Fat Trans</string>
    <string name="iron">Iron</string>
    <string name="potassium">Potassium</string>
    <string name="protein">Protein</string>
    <string name="sodium">Sodium</string>
    <string name="sugar">Sugar</string>
    <string name="calories">Calories</string>
    <string name="x_kcal">%.2f kcal</string>
    <string name="x_mg">%.2f mg</string>
    <string name="x_gramm">%.2f g</string>
</resources>
