<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              xmlns:tools="http://schemas.android.com/tools"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_horizontal"
            android:layout_marginEnd="@dimen/layout_margin_horizontal">

            <TextView
                android:id="@+id/txtCaloriesConsumedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/calories"/>

            <TextView
                android:id="@+id/txtCalciumLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtCaloriesConsumedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calcium"/>
            <TextView
                android:id="@+id/txtVitaminALabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtCalciumLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vitamin_a"/>
            <TextView
                android:id="@+id/txtVitaminCLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtVitaminALabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vitamin_c"/>
            <TextView
                android:id="@+id/txtCarbsTotalLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtVitaminCLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carbs_total"/>
            <TextView
                android:id="@+id/txtCholesterolLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtCarbsTotalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cholesterol"/>
            <TextView
                android:id="@+id/txtDietaryFiberLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtCholesterolLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dietary_fiber"/>
            <TextView
                android:id="@+id/txtFatMonosaturatedLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtDietaryFiberLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fat_monosaturated"/>
            <TextView
                android:id="@+id/txtFatPolysaturatedLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtFatMonosaturatedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fat_polysaturated"/>

            <TextView
                android:id="@+id/txtFatSaturatedLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtFatPolysaturatedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fat_saturated"/>
            <TextView
                android:id="@+id/txtFatUnsaturatedLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtFatSaturatedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fat_unsaturated"/>
            <TextView
                android:id="@+id/txtFatTotalLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtFatUnsaturatedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fat_total"/>
            <TextView
                android:id="@+id/txtFatTransLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtFatTotalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fat_trans"/>
            <TextView
                android:id="@+id/txtIronLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtFatTransLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iron"/>
            <TextView
                android:id="@+id/txtPotassiumLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtIronLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/potassium"/>
            <TextView
                android:id="@+id/txtProteinLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtPotassiumLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protein"/>
            <TextView
                android:id="@+id/txtSodiumLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtProteinLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sodium"/>
            <TextView
                android:id="@+id/txtSugarLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtSodiumLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sugar"/>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/innerBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="txtIronLabel,txtProteinLabel,txtCholesterolLabel,txtPotassiumLabel,txtCarbsTotalLabel,txtFatTotalLabel,txtFatMonosaturatedLabel,txtSugarLabel,txtCaloriesConsumedLabel,txtVitaminCLabel,txtVitaminALabel,txtDietaryFiberLabel,txtCalciumLabel,txtFatSaturatedLabel,txtFatUnsaturatedLabel,txtSodiumLabel,txtFatPolysaturatedLabel,txtFatTransLabel"/>

            <TextView
                android:id="@+id/txtCaloriesConsumedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/txtCaloriesConsumedLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/innerBarrier"
                app:layout_constraintTop_toTopOf="@id/txtCaloriesConsumedLabel"
                android:gravity="end|center_vertical"
                tools:text="1000kcal"/>

            <TextView
                android:id="@+id/txtCalciumValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="100mg"
                app:layout_constraintStart_toEndOf="@id/innerBarrier"
                app:layout_constraintTop_toTopOf="@id/txtCalciumLabel"
                android:gravity="end|center_vertical"/>
            <TextView
                android:id="@+id/txtVitaminAValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="100mg"
                app:layout_constraintStart_toEndOf="@id/innerBarrier"
                app:layout_constraintTop_toTopOf="@id/txtVitaminALabel"
                android:gravity="end|center_vertical"/>

            <TextView
                android:id="@+id/txtVitaminCValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="100mg"
                app:layout_constraintStart_toEndOf="@id/innerBarrier"
                app:layout_constraintTop_toTopOf="@id/txtVitaminCLabel"
                android:gravity="end|center_vertical"/>
            <TextView
                android:id="@+id/txtCarbsTotalValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="100mg"
                app:layout_constraintStart_toEndOf="@id/innerBarrier"
                app:layout_constraintTop_toTopOf="@id/txtCarbsTotalLabel"
                android:gravity="end|center_vertical"/>
            <TextView
                android:id="@+id/txtCholesterolValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="100mg"
                app:layout_constraintStart_toEndOf="@id/innerBarrier"
                app:layout_constraintTop_toTopOf="@id/txtCholesterolLabel"
                android:gravity="end|center_vertical"/>
            <TextView
                android:id="@+id/txtDietaryFiberValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="100mg"
                app:layout_constraintStart_toEndOf="@id/innerBarrier"
                app:layout_constraintTop_toTopOf="@id/txtDietaryFiberLabel"
                android:gravity="end|center_vertical"/>
            <TextView
                android:id="@+id/txtFatMonosaturatedValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="100mg"
                app:layout_constraintStart_toEndOf="@id/innerBarrier"
                app:layout_constraintTop_toTopOf="@id/txtFatMonosaturatedLabel"
                android:gravity="end|center_vertical"/>
            <TextView
                android:id="@+id/txtFatPolysaturatedValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="100mg"
                app:layout_constraintStart_toEndOf="@id/innerBarrier"
                app:layout_constraintTop_toTopOf="@id/txtFatPolysaturatedLabel"
                android:gravity="end|center_vertical"/>
            <TextView
                android:id="@+id/txtFatSaturatedValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="100mg"
                app:layout_constraintStart_toEndOf="@id/innerBarrier"
                app:layout_constraintTop_toTopOf="@id/txtFatSaturatedLabel"
                android:gravity="end|center_vertical"/>
            <TextView
                android:id="@+id/txtFatUnsaturatedValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="100mg"
                app:layout_constraintStart_toEndOf="@id/innerBarrier"
                app:layout_constraintTop_toTopOf="@id/txtFatUnsaturatedLabel"
                android:gravity="end|center_vertical"/>
            <TextView
                android:id="@+id/txtFatTotalValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="100mg"
                app:layout_constraintStart_toEndOf="@id/innerBarrier"
                app:layout_constraintTop_toTopOf="@id/txtFatTotalLabel"
                android:gravity="end|center_vertical"/>
            <TextView
                android:id="@+id/txtFatTransValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="100mg"
                app:layout_constraintStart_toEndOf="@id/innerBarrier"
                app:layout_constraintTop_toTopOf="@id/txtFatTransLabel"
                android:gravity="end|center_vertical"/>
            <TextView
                android:id="@+id/txtIronValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="100mg"
                app:layout_constraintStart_toEndOf="@id/innerBarrier"
                app:layout_constraintTop_toTopOf="@id/txtIronLabel"
                android:gravity="end|center_vertical"/>
            <TextView
                android:id="@+id/txtPotassiumValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="100mg"
                app:layout_constraintStart_toEndOf="@id/innerBarrier"
                app:layout_constraintTop_toTopOf="@id/txtPotassiumLabel"
                android:gravity="end|center_vertical"/>
            <TextView
                android:id="@+id/txtProteinValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="100mg"
                app:layout_constraintStart_toEndOf="@id/innerBarrier"
                app:layout_constraintTop_toTopOf="@id/txtProteinLabel"
                android:gravity="end|center_vertical"/>
            <TextView
                android:id="@+id/txtSodiumValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="100mg"
                app:layout_constraintStart_toEndOf="@id/innerBarrier"
                app:layout_constraintTop_toTopOf="@id/txtSodiumLabel"
                android:gravity="end|center_vertical"/>
            <TextView
                android:id="@+id/txtSugarValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="100mg"
                app:layout_constraintStart_toEndOf="@id/innerBarrier"
                app:layout_constraintTop_toTopOf="@id/txtSugarLabel"
                android:gravity="end|center_vertical"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>